# acl-bea2025-workshop-st

./: .gitignore  README.md
task4/: README.md  data.py  requirements.txt  train.py
task5/: 01_finetuned_llama.ipynb  01_finetuned_longformer.py  02_llm_judging.py  03_bigbird_finetuning.ipynb  04_Longformer Finetuning.ipynb  05_Mathbert Finetuning.ipynb  pyproject.toml  refine_raw_data.py
task_2/: Mathbert.ipynb  Mistral_math.ipynb  bert (1).ipynb  train_2-SLM.ipynb
